AppInmobiliaria/force-app/main/default/objects/Location__c/fields/Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location__c</fullName>
    <label>Parent Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Sub-Locations</relationshipLabel>
    <relationshipName>Sub_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>